# iio-niri

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  MODULE-DOC.md  README.md  README.template.md  flake.nix  module-doc.md
nix/: default.nix  doc.nix  module.nix
src/: accelerometer.rs  app.rs  ipc.rs  listen.rs  main.rs  monitor.rs  orientation.rs  proxy.rs  socket.rs  state.rs
