[package]
name = "iio-niri"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = "4.5.42"
clap_derive = "4.5.41"
dbus = "0.9.7"
niri-ipc = { version = "=25.11.0", features = ["clap"] }
signal-hook = "0.3.18"
