[package]
name = "iio-niri"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = "4.5.42"
clap-verbosity-flag = "3.0.4"
clap_derive = "4.5.41"
dbus = "0.9.7"
env_logger = "0.11.8"
log = "0.4.29"
niri-ipc = { version = "=25.11.0", features = ["clap"] }
signal-hook = "0.3.18"
